--- a/textfiles/youtubetips/youtubetips.html
+++ b/textfiles/youtubetips/youtubetips.html
@@ -414,7 +414,7 @@
     <ul>
         <li><a href="https://www.youtube.com/@Drakenwild">Drakenwild</a></li>
         <li><a href="https://www.youtube.com/@Swack">Swack!</a></li>
-        <li><a href=https://www.youtube.com/@Grazzyy"">Grazzy</a></li>
+        <li><a href="https://www.youtube.com/@Grazzyy">Grazzy</a></li>
         <li>Yoshi (My Cat)</li>
     </ul>
     
